--- a/todo.txt
+++ b/todo.txt
@@ -4,8 +4,8 @@ x Configure neovim
 DYNAMIC ARRAY SAGA
 x freeing
 x separate creation/allocation?
-- extending capacity & length
-- getting length
+x extending capacity & length
+x getting length
 - iterators?
 - inserting at the end
 - strings
