--- a/todo.txt
+++ b/todo.txt
@@ -21,6 +21,7 @@ x component definition macros
 x a real system
 x filters for system adding
 - string_format
+- optimized formatting
 - inplace array initialization
 - another swing at iteration
 - world
